--- a/traversability_mapping/launch/params/move_base/costmap_common_params.yaml
+++ b/traversability_mapping/launch/params/move_base/costmap_common_params.yaml
@@ -3,15 +3,16 @@ origin_z: 0.0
 z_resolution: 1
 z_voxels: 2
 
-obstacle_range: 2.5
-raytrace_range: 3.0
+# This two must be tuned for RCVE
+obstacle_range: 20.0
+raytrace_range: 40.0
 
 publish_voxel_map: false
 transform_tolerance: 3.0
 meter_scoring: true
 
-footprint: [[-0.21, -0.165], [-0.21, 0.165], [0.21, 0.165], [0.21, -0.165]]
-footprint_padding: 0.1
+footprint: [[-1.55, -0.85], [-1.55, 0.85], [1.55, 0.85], [1.55, -0.85]]
+footprint_padding: 1.80
 
 plugins:
 - {name: obstacles_layer, type: "costmap_2d::ObstacleLayer"}
@@ -19,7 +20,13 @@ plugins:
 
 obstacles_layer:
   observation_sources: scan
-  scan: {sensor_frame: base_link, data_type: LaserScan, topic: pointcloud_2_laserscan, marking: true, clearing: true, min_obstacle_height: -2.0, max_obstacle_height: 2.0, obstacle_range: 4.0, raytrace_range: 4.5}
+    # This two must be tuned for RCVE
+  scan: {sensor_frame: base_footprint, data_type: LaserScan, topic: pointcloud_2_laserscan, marking: true, clearing: true, min_obstacle_height: -2.0, max_obstacle_height: 2.0, obstacle_range: 10.0, raytrace_range: 10.0}
+  footprint_clearing_enabled: false # Default false
 
-inflater_layer:
- inflation_radius: 0.3
+inflater_layer: # Tuned for RCVE values
+ inflation_radius: 2.0
+ inscribed_radius: 1.55
+ circumscribed_radius: 1.80
+ cost_scaling_factor: 10.0 # default 10
+
