--- a/traversability_mapping/launch/params/move_base/map_nav_params/local_costmap_params.yaml
+++ b/traversability_mapping/launch/params/move_base/map_nav_params/local_costmap_params.yaml
@@ -1,10 +1,10 @@
 local_costmap:
    global_frame: map
-   robot_base_frame: base_link
+   robot_base_frame: base_footprint
    update_frequency: 5.0
    publish_frequency: 5.0
-   width: 6
-   height: 6
+   width: 40.0
+   height: 40.0
    resolution: 0.1
    static_map: false
    rolling_window: true
